--- a/assets/style.css
+++ b/assets/style.css
@@ -55,7 +55,7 @@ body {
 }
 
 body.demos .section {
-    background: url(images/bg.png) repeat top center #f2f3f5;
+    background: url(images/bg.webp) repeat top center #f2f3f5;
 }
 
 body.demos .section-title img {
@@ -508,21 +508,21 @@ li.social-links a {
 -------------------------------------------------------------------*/
 
 .slider-bg-one {
-    background-image: url("uploads/slider_01.jpg");
+    background-image: url("uploads/slider_01.webp");
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
 }
 
 .slider-bg-two {
-    background-image: url("uploads/slider_02.jpg");
+    background-image: url("uploads/slider_02.webp");
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
 }
 
 .slider-bg-three {
-    background-image: url("uploads/slider_03.jpg");
+    background-image: url("uploads/slider_03.webp");
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -1439,7 +1439,7 @@ hr.invis1 {
     width: 100%;
     height: 100%;
     position: relative;
-    background: url("uploads/code.jpg") no-repeat;
+    background: url("uploads/code.webp") no-repeat;
 }
 
 .design-wrapper {
@@ -1460,7 +1460,7 @@ hr.invis1 {
     position: relative;
     -webkit-transform: translateX(-50%);
     transform: translateX(-50%);
-    background: url("uploads/design.jpg") no-repeat;
+    background: url("uploads/design.webp") no-repeat;
 }
 
 
@@ -2010,7 +2010,7 @@ select.mobile-device {
 }
 
 #contact {
-    background: url(images/bg.png) no-repeat center center #fff;
+    background: url(images/bg.webp) no-repeat center center #fff;
 }
 
 
@@ -2867,7 +2867,7 @@ select.mobile-device {
 
 
 .banner-bg-1{
-	background: url(uploads/inner-bg.jpg);
+	background: url(uploads/inner-bg.webp);
 	padding: 120px 0;	
 	background-clip: initial;
 	background-color: rgba(0, 0, 0, 0);
